--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <head>
     <title>Chill Magic's Personal WebSite</title>
-    <link rel="icon" href="index.ico" type="image/x-icon" />
+    <link rel="icon" href="https://chillmagic.github.io/index.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="index.ico">
     <link rel="Bookmark" href="index.ico"></head>
   <h1 align="center" style="text-align:center;">
