--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <br>    .string #2 "World!"
         <br>
         <br>main:
+        <br>    .mode static
         <br>    mvd %1, #1
         <br>    mvd %2, #2
         <br>    call %res, Core#String#+, %1 %2
